update logback; recompile tweetnacl, rework crc32c; downgrade to Java 8